--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <meta name="viewport" content="width=device-width, 
     initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico"image/x-icon">
+    <link rel="stylesheet" href="estilos/style.css">
     <title>projeto rede social</title>
 </head>
 <body>
-    <h1>hello world</h1>
+   <main>
+    <section id="telefone">
+
+    </section>
+
+    <section id="redes sociais">
+
+    </section>
+
+   </main>
 </body>
 </html>
