--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, 
     initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico"image/x-icon">
-    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>projeto rede social</title>
 </head>
 <body>
