--- a/faceook.html
+++ b/faceook.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="github.PNG"tela-youtube">
-    <a href="https://github.com/VictorSousa77" target="_blank">acesse</a>
+    <img src="facebook.jpeg" alt="tela-youtube">
+    <a href="https://www.facebook.com/profile.php?id=100061153735796" target="_blank">acesse</a>
 </body>
 </html>
