--- a/twiter.html
+++ b/twiter.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="github.PNG"tela-youtube">
-    <a href="https://github.com/VictorSousa77" target="_blank">acesse</a>
+    <img src="twitter.jpeg" alt="tela-youtube">
+    <a href="https://x.com/vs777s?s=21" target="_blank">acesse</a>
 </body>
 </html>
